--- a/app/views/posts/_commentComment.html.erb
+++ b/app/views/posts/_commentComment.html.erb
@@ -2,5 +2,5 @@
           <input id ="comment_text" type="text" name="comment_text" placeholder="enter comments">
           <input id="user_id" type="hidden" name="user_id" value="<%= current_user.id%>">
           <input id="user_id" type="hidden" name="class" value="Class">
-          <input id="button" type="submit" value="comment">
+          <input id="comment" type="submit" value="comment">
   </form>
