--- a/app/views/posts/_postvoteup.html.erb
+++ b/app/views/posts/_postvoteup.html.erb
@@ -2,6 +2,6 @@
   <input id="user_id" type="hidden" name="user_id" value="<%= current_user.id%>">
   <input id="class" type="hidden" name="class" value="Post">
   <input id="vote" type="hidden" name="vote" value= 1 >
-  <input id="button" type="submit" value="upvote">
+  <input id="up_vote" type="submit" value="upvote">
     +<%= x.votes.where("vote=1").count%>
 </form>
